src/test/deca/syntax/valid/SansObjet/Inst9-Return-Op.deca
// Description:
//    Return addition instruction.
//
// Results:
//    (void)
//
// Historique:
//    cree le 08/01/2022

{
        return sum + 33;
}
