src/test/deca/syntax/invalid/SansObjet/Inst9-Return-Print.deca
// Description:
//    Return print instruction.
//
// Results:
//    11:15 extraneous input 'print' expecting {FLOAT, INT, '(', '-', '!',
//    'false', 'null', 'readInt', 'readFloat', 'true', IDENT, STRING, NEW, THIS}
//
// Historique:
//    cree le 08/01/2022

{
        return print("Hello");
}
